# src/controllers/admin.ts
@@ -31,3 +31,15 @@ export async function handleGetUsers(req:IExpressRequest,res:ExpressResponse):Pr
 
     }
 }
+
+export async function handleCreateSubscription(req:IExpressRequest,res:ExpressResponse):Promise<void>{
+    try{
+        const {email,schedule,paymentStatus,startDate,subscriptionStatus} = req.body
+
+        await adminService.createSubscription({email,schedule,paymentStatus,startDate,subscriptionStatus})
+
+        ResponseManager.success(res,{message:"subscription successfully created"})
+    }catch (err:any){
+        ResponseManager.handleError(res,err)
+    }
+}
