# src/interfaces/admin/admin-requests.ts
@@ -2,3 +2,11 @@ export interface AdmingGoogleLogin{
     googleToken: string;
     deviceId: string;
 }
+
+export interface CreateSubscriptionRequest{
+    email:string;
+    schedule:string;
+    paymentStatus:string;
+    startDate:string;
+    subscriptionStatus:string;
+}
